[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/TileMarketBackground.png" type="Texture" id=1]
[ext_resource path="res://Drawable/Card/TileCardDrawable.tscn" type="PackedScene" id=2]
[ext_resource path="res://Drawable/Market/TileMarket.gd" type="Script" id=3]

[node name="TileMarket" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )

[node name="Card1" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -144.0
margin_right = -75.0
margin_bottom = -16.0
currency = 1

[node name="Card2" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 175.0
margin_top = -145.0
margin_right = 303.0
margin_bottom = -17.0
currency = 2

[node name="Card3" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 177.0
margin_top = 17.0
margin_right = 305.0
margin_bottom = 145.0
currency = 3

[node name="Card4" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = 17.0
margin_right = -76.0
margin_bottom = 145.0
currency = 0
